<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Free&amp;For Sale</string>
    <string name="action_settings">Settings</string>
    <string name="signUpButton">Sign Up</string>
    <string name="startTit1">Hopkins</string>
    <string name="logInTit">Log In</string>
    <string name="logInUserName">JHU Email</string>
    <string name="logInPW">Password</string>
    <string name="SubmitButton">Submit</string>
    <string name="signUpTit">Create your account</string>
    <string name="signUpUserName">User Name, it will be shown to others</string>
    <string name="signUpName">Real name, you cannot change once you submit</string>
    <string name="signUpEmail">JHU Email</string>
    <string name="signUpPhone">Phone number</string>
    <string name="signUpPW">Password</string>
    <string name="signUpCPW">Please type in your password again</string>
    <string name="mainMenuTit">Welcome!</string>
    <string name="mainMenuAccBu">Manage Account</string>
    <string name="mainMenuSO">Sign Out</string>
    <string name="postItemButt">Post An Item</string>
    <string name="browItemButt">Browse Items</string>
    <string name="viewOfferButt">View Offers</string>
    <string name="title_activity_post_item">Post Your Item</string>
    <string name="postName">Name</string>
    <string name="postPic">Upload Picture</string>
    <string name="type_prompt">Select a type</string>
    <string name="recoverEmail">Enter Email</string>
    
    <string-array name="itemTypes_array">
        <item>Book</item>
        <item>Furniture</item>
        <item>Electronic Device</item>
        <item>Clothes</item>
        <item>Misc</item>
        <item>Game</item>
    </string-array>
    
        <string name="postType">Type</string>
        <string name="postBrief">Brief</string>
        <string name="postDescript">Long Description</string>
        <string name="PWForgot">Forgot Password?</string>
    <string name="offer_text">offer</string>
    <string name="action_sign_in_register"><b>Sign in</b></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid(Should contain@jhu.edu)</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_android_select_image">AndroidSelectImage</string>
	<string name="dialog_title">Select or take a picture</string>
	<string-array name="picSelect_array">
        <item>Select a picture</item>
        <item>Take a picture</item>
        <item>Cancel</item>
    </string-array>
    <string name="dialog_make_offer">Make offer to this item</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_item_page">ItemPage</string>
    <string name="offerPay">Enter how much you want to pay</string>
    <string name="view_item_by_type">View items by selected types</string>
</resources>
