<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".AccountActivity" >
    
	<TextView
        android:id="@+id/SUtextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/signUpTit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />
    
    <EditText
        android:id="@+id/SignupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/signUpName"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/SignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/signUpEmail"
        android:inputType="textEmailAddress"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/SignupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/signUpUserName"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/SignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/signUpPW"
        android:ems="10"
        android:singleLine="true" />
    
    <EditText
        android:id="@+id/SignupCPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:inputType="textPassword"
        android:hint="@string/signUpCPW"
        android:ems="10"
        android:singleLine="true" />

    <EditText
        android:id="@+id/SignupPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/signUpPhone"
        android:inputType="phone"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/SUbutton1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/SubmitButton"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:onClick="enter" />

</LinearLayout>
