<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/east"
    tools:context=".MainMenuActivity" >

    <Button
        android:id="@+id/MMbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/mainMenuAccBu"
        android:onClick="accountManagement"
        android:textStyle="bold"
        android:background="@android:drawable/btn_default"/>

    <Button
        android:id="@+id/MMbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/mainMenuSO" 
        android:onClick="signOut"
        android:textStyle="bold"
        android:background="@android:drawable/btn_default"/>

    <Button
        android:id="@+id/MMbutton5"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_below="@+id/MMbutton4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="113dp"
        android:text="@string/viewOfferButt"
        android:onClick="viewOffers" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@android:drawable/btn_default"/>

    <Button
        android:id="@+id/MMbutton4"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/MMbutton5"
        android:layout_below="@+id/MMbutton3"
        android:layout_marginTop="112dp"
        android:text="@string/browItemButt" 
    	android:onClick="browseItem" 
    	android:textSize="25sp"
        android:textStyle="bold"
        android:background="@android:drawable/btn_default"/>

    <TextView
        android:id="@+id/MMtextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MMbutton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:maxLines="1"
        android:text="@string/mainMenuTit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="60sp" />

    <Button
        android:id="@+id/MMbutton3"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/MMbutton4"
        android:layout_below="@+id/MMtextView1"
        android:layout_marginTop="140dp"
        android:onClick="post"
        android:text="@string/postItemButt" 
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@android:drawable/btn_default"/>

</RelativeLayout>
