<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LogInActivity" >
    
      <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
      <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="739dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/LIbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="152dp"
        android:text="@string/PWForgot" 
		android:onClick="recoverPassword"/>

    <TextView
        android:id="@+id/LItextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="100dp"
        android:text="@string/logInTit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="110sp" 
        android:maxLines="1"/>

    <Button
        android:id="@+id/LIbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/LIeditText1"
        android:layout_alignRight="@+id/LIeditText2"
        android:text="@string/SubmitButton"
        android:textSize="20sp" 
        android:onClick="enter" />

    <EditText
        android:id="@+id/LIeditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LItextView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:hint="@string/logInUserName"
        android:inputType="textEmailAddress"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/LIeditText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LIeditText2"
        android:layout_marginTop="122dp"
        android:layout_toLeftOf="@+id/LIbutton1"
        android:ems="10"
        android:hint="@string/logInPW"
        android:inputType="textPassword"
        android:singleLine="true" />

</RelativeLayout>
  </ScrollView>

</merge>