<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/gilman_hall"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/StarttextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/StarttextView1"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#EAC117"
        android:textSize="70sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Startbutton2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/Startbutton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:onClick="signUp"
        android:text="@string/signUpButton"
        android:textSize="40sp"
        android:background="@android:drawable/btn_default" />

    <Button
        android:id="@+id/Startbutton1"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_below="@+id/StarttextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="152dp"
        android:onClick="logIn"
        android:text="@string/logInTit"
        android:textSize="50sp"
        android:textStyle="bold" 
        android:background="@android:drawable/btn_default"/>

    <TextView
        android:id="@+id/StarttextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="117dp"
        android:text="@string/startTit1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0000FF"
        android:textScaleX="1"
        android:textSize="100sp" />

</RelativeLayout>
