<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".PostItemActivity" >

<ScrollView 
    android:id="@+id/ItemPageScroll" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:scrollbars="none">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="40dp">

    <EditText
        android:id="@+id/PIeditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="20dp"
        android:layout_gravity="left"
        android:hint="@string/postName" />
    
    <TextView
        android:id="@+id/PItextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postType"
        android:layout_marginLeft="100dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <Spinner
        android:id="@+id/PIspinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"

        android:entries="@array/itemTypes_array"/>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="60dp">
    <TextView
        android:id="@+id/PItextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postBrief"
        android:layout_marginLeft="100dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    <EditText
        android:id="@+id/PIeditText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:layout_marginLeft="150dp"
		android:inputType="textShortMessage" >
    </EditText>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="100dp">

    <TextView
        android:id="@+id/PITextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postDescript"
        android:layout_marginLeft="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/PIeditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="78dp"
        android:inputType="textMultiLine" />
</LinearLayout>

    <ImageView
        android:id="@+id/ItemPagePic"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>
    
    <Button
        android:id="@+id/PIbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postPic" 
        android:onClick="uploadPic"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/PIbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SubmitButton" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:onClick="submit"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
