<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RecoverPasswordActivity" >
    
    
    <EditText
        android:id="@+id/Recover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_below="@+id/SUtextView1"
        android:hint="@string/logInUserName"
        android:inputType="textEmailAddress"
        android:singleLine="true" >
       <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/SUtextView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:maxLines="1"
        android:text="@string/recoverEmail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />
    
     <Button
        android:id="@+id/RPbutton1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Recover"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/SubmitButton"
        android:textSize="20sp"
        android:onClick="enter" />

</RelativeLayout>